Window Placement: Implement NativeWidgetMac::IsMaximized()|Maximize()

This CL enables NativeWidgetMac::IsMaximized()|Maximize() using
NSWindow's instance instance property `zoomed` and method `zoom:`.
Also extend NativeWidgetMac::Restore(). The interactive test
`MultiScreenFullscreenControllerInteractiveTest.SeparateDisplayMaximized
` is enabled now on Mac platform to ensure these changes.

Bug: 868599
Change-Id: I2bc010d2b6c18949ea862bd2240defb26fb91600
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3881629
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Commit-Queue: Avi Drissman <avi@chromium.org>
Reviewed-by: Mike Wasserman <msw@chromium.org>
Auto-Submit: Fangzhen Song <songfangzhen@bytedance.com>
Reviewed-by: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1051602}