components/remote_cocoa/app_shim/native_widget_ns_window_bridge.h
@@ -250,6 +250,7 @@ class REMOTE_COCOA_APP_SHIM_EXPORT NativeWidgetNSWindowBridge
   void SetTransitionsToAnimate(
       remote_cocoa::mojom::VisibilityTransition transitions) override;
   void SetVisibleOnAllSpaces(bool always_visible) override;
+  void SetZoomed(bool zoomed) override;
   void EnterFullscreen(int64_t target_display_id) override;
   void ExitFullscreen() override;
   void SetCanAppearInExistingFullscreenSpaces(
@@ -312,6 +313,10 @@ class REMOTE_COCOA_APP_SHIM_EXPORT NativeWidgetNSWindowBridge
 
   // Remove the specified child window without closing it.
   void RemoveChildWindow(NativeWidgetNSWindowBridge* child);
+
+  // Check if the window's zoomed state has changed. If changes happen, notify
+  // the clients.
+  void CheckAndNotifyZoomedStateChanged();
 
   // Notify descendants of a visibility change.
   void NotifyVisibilityChangeDown();
@@ -398,6 +403,10 @@ class REMOTE_COCOA_APP_SHIM_EXPORT NativeWidgetNSWindowBridge
   // Stores the value last read from -[NSWindow isVisible], to detect visibility
   // changes.
   bool window_visible_ = false;
+
+  // Stores the value last read from -[NSWindow isZoomed], to detect zoomed
+  // state changes.
+  bool window_zoomed_ = false;
 
   // If true, the window is either visible, or wants to be visible but is
   // currently hidden due to having a hidden parent.
